--- a/css/main.css
+++ b/css/main.css
@@ -449,7 +449,7 @@ body {
   color: #ffffff;
   font-family: 'Montserrat', Arial, sans-serif;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .main-logo-text-holder-role {
